bpo-44645: Check for interrupts on any potentially backwards edge (GH-27216) (GH-27235)

(cherry picked from commit d09c13417890427f829e3df297beb0e27133f8f4)

Co-authored-by: Mark Shannon <mark@hotpy.org>